--- a/MyFirstProgram.ipynb
+++ b/MyFirstProgram.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1wKZIoI0deiy3MOCO7pta",
+      "authorship_tag": "ABX9TyM/d7syvMLhE8YlczI104iZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,50 +321,13 @@
       "cell_type": "code",
       "source": [
         "with open('\\gdrive\\My Drive\\test.txt', 'w') as f:\n",
-        "    f.writelines(\"Hello Google Colab!\")"
+        "    f.writelines(\"Hello Colab!\")"
       ],
       "metadata": {
         "id": "bh0IjbCVblgx"
       },
       "execution_count": 22,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Hello\")\n",
-        "print(\"Hello\")\n",
-        "print(\"Hello\")\n",
-        "print(\"Hello\")\n",
-        "print(\"Hello\")\n",
-        "print(\"Hello\")\n",
-        "print(\"Hello\")\n",
-        "print(\"Hello\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qnz1jUtEdbO6",
-        "outputId": "94388063-c850-4613-df35-4b7a46f9abda"
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello\n",
-            "Hello\n",
-            "Hello\n",
-            "Hello\n",
-            "Hello\n",
-            "Hello\n",
-            "Hello\n",
-            "Hello\n"
-          ]
-        }
-      ]
     }
   ]
 }
